# locasql-explorer

./: .gitignore  GITHUB_READY.md  LICENSE  PHASE_4_IMPLEMENTATION_SUMMARY.md  README.md  SPEC.md  analyze_csv.py  apply_sqlite_changes.py  create_icon.py  fix_sqlite_query.py  import_sqlite_method.txt  pyproject.toml  requirements.txt  sqlite_database_code.py  sqlite_import_code.py  test_background_queries.py  test_comment_parsing.py  test_comment_toggle.py  test_data.db  test_delimiter_detection.py  test_error_dialog_theme.py  test_export_layout_fix.py  test_export_pagination.py  test_mcp_demo.py  test_phase7_implementation.py  test_query_parser.py  test_simple_delimiter.py  test_sqlite_import.py  test_tabbed_editor.py  test_table_selection.py
docs/: BACKGROUND_QUERY_EXECUTION.md  DELIMITER_DETECTION.md  DEVELOPMENT.md  GUI_DEVELOPMENT_COMPLETE.md  PHASE_9_COMMENT_TOGGLE_FEATURE.md  PHASE_9_COMPLETE.md  PHASE_9_IMPLEMENTATION_SUMMARY.md  PHASE_9_TESTING_GUIDE.md  PRE_GITHUB_CHECKLIST.md  QUICK_START_MULTI_TAB.md  mcp_guide.md
docs/phases/: PHASE_2_COMPLETE.md  PHASE_5_SUMMARY.md
examples/: demo_complete_workflow.py
src/localsql_explorer/: __init__.py  __main__.py  column_analysis.py  cte_support.py  data_pagination.py  database.py  exporter.py  importer.py  main.py  mcp_main.py  mcp_server.py  models.py  query_history.py  query_parser.py  table_profiling.py  themes.py
src/localsql_explorer/ui/: __init__.py  column_metadata_dialog.py  data_optimization_settings.py  enhanced_sql_editor.py  excel_sheet_dialog.py  export_dialog.py  intelligent_sql_editor.py  main_window.py  paginated_results.py  progress_dialog.py  query_dialogs.py  query_history_panel.py  query_worker.py  results_view.py  sql_editor.py  styling.py  tabbed_sql_editor.py  table_list.py  table_profiling_dialog.py
tests/: conftest.py  test_column_analysis.py  test_compatibility_functions.py  test_mcp_server.py  test_query_history.py  test_theme_integration.py  test_themes.py
tests/development/: README.md  test_dataset_filtering.py  test_enhanced_metrics.py  test_layout_fix.py  test_search_functionality.py
tests/integration/: __init__.py  test_workflows.py
tests/unit/: __init__.py  test_database.py  test_exporter.py  test_importer.py  test_results_formatting.py
